--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@opam/dune": "*",
     "@opam/ppx_inline_test": "*",
-    "@esy-ocaml/reason": "*",
+    "@esy-ocaml/reason": "link:./reason",
     "ocaml": "~4.6.0"
   }
 }
