--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,5 @@
 (executable
   (name Hello)
   (public_name Hello.exe)
-  (preprocess (pps ppx_inline_test))
+  (preprocess (pps ppx_inline_test ppx_expect))
   )
